<!-- RadioCommande2 -->
<!--suppress GrazieInspection -->
<resources>
    <string name="adresse_ip">Adresse IP (ex: 192.168.1.50:22)</string>
    <string name="attente_commande">Attente de commande&#8230;\n</string>
    <string name="command_unknown">Commande inexistante</string>
    <string name="configuration_serveur">Configuration Serveur</string>
    <string name="console_listening">Vous écoutez %s</string>
    <string name="couper_son">Couper le son</string>
    <string name="error_execution">Erreur : %s</string>
    <string name="mot_de_passe">Mot de passe SSH</string>
    <string name="importer_cle">Importer une clé privée SSH</string>
    <string name="microphone">Microphone</string>
    <string name="radiocommande">RadioCommande</string>
    <string name="response_empty">Commande exécutée (pas de retour)</string>
    <string name="sauvegarder_et_quitter">Sauvegarder et Quitter</string>
    <string name="serveur_connecte">Serveur : Connecté</string>
    <string name="serveur_deconnecte">Serveur : Déconnecté</string>
    <string name="serveur_hors_ligne">Serveur : Hors ligne</string>
    <string name="statut_attente">En attente.</string>
    <string name="statut_cle">Statut : Aucune clé importée</string>
    <string name="statut_cle_import_succes">Statut : Clé importée avec succès</string>
    <string name="success_execution">commande éxécutée</string>
    <string name="surveillance_stop">Surveillance arrêtée</string>
    <string name="telecharger_cle">Télécharger la clé SSH</string>
    <string name="utilisateur">Utilisateur (ex: pi)</string>
    <string name="verification">Vérification…</string>
    <string name="volume_du_serveur">Volume du serveur : %1$d%%</string>
    <string name="volume_format">Volume : %1$d%%</string>
    <string name="volume_muet">Volume : MUET</string>
    <string name="volume_serveur">Volume du Serveur</string>
    <string name="volume">Volume : 50%</string>
</resources>